--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,13 @@ name = "django-rest-tutorial"
 version = "0.1.0"
 description = ""
 authors = ["Zeeshan Asim <zeeshanravian1@gmail.com>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
 djangorestframework = "^3.15.2"
-django-stubs = "^5.0.4"
+djangorestframework-stubs = "^3.15.0"
 django-environ = "^0.11.2"
 psycopg2-binary = "^2.9.9"
 django-debug-toolbar = "^4.4.6"
@@ -22,11 +23,13 @@ jupyter = "^1.1.0"
 radon = "^6.0.1"
 mypy = "^1.11.2"
 pygments = "^2.18.0"
+types-pygments = "^2.18.0.20240506"
 python-lsp-server = {extras = ["all"], version = "^1.12.0"}
 black = "^24.8.0"
 pyupgrade = "^3.17.0"
-ruff = "^0.6.2"
+ruff = "^0.6.3"
 skjold = "^0.6.2"
+httpie = "^3.2.3"
 logfire = "^0.51.0"
 
 [build-system]
